--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
-.calculator-page {
+.calculator{
     background-color: rgb(230, 233, 235);
+}
+.calculator-page {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
@@ -8,8 +10,6 @@
     font-size: calc(8px + 2vmin);
     color: white;
 }
-
-
 .calculator__inner {
     width: 375px;
     height: 600px;
@@ -23,50 +23,41 @@
     background: linear-gradient(to right, rgba(140, 72, 165, 1) 0%, rgba(252, 160, 121, 1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#8c48a5', endColorstr='#fca079', GradientType=1); /* IE6-9 */
 }
-
 .calculator__window {
     border-top-left-radius: 10px;
     border-top-right-radius: 8px;
     height: 200px;
 }
-
 .calculator__result-window {
     display: flex;
     justify-content: flex-end;
 }
-
 .calculator__result-window span {
     margin-right: 40px;
     margin-top: 40px;
     font-size: 60px;
 }
-
 .calculator__operation-window {
     display: flex;
     justify-content: flex-end;
 }
-
 .calculator__operation-window span {
     margin-right: 40px;
     margin-top: 30px;
     font-size: 20px;
     color: rgba(255, 255, 255, 0.51);
 }
-
 .counter-btns {
     height: 300px;
     border-radius: 5px;
 
 }
-
 .row {
 
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-
-
 .btn {
     color: black;
     font-size: 25px;
@@ -80,7 +71,6 @@
 .btn:hover{
     color: orange;
 }
-
 .counter__inc-btn {
     margin-left: 15px;
 }
@@ -88,13 +78,10 @@
 .counter__reset-btn {
     margin-right: 15px;
 }
-
-
 .operator {
     background-color: rgb(234, 234, 234);
     color: rgb(228 121 78);
 }
-
 .equal {
     background: rgb(140, 72, 165); /* Old browsers */
     color: white;
@@ -105,7 +92,6 @@
     border-bottom-left-radius: 8px;
     color: rgb(140, 72, 165);
 }
-
 .calculator-title {
     text-align: center;
     margin: 10px;
@@ -113,4 +99,171 @@
 
 button:focus {
     outline: none !important
+}
+
+/*.calculator{*/
+/*    background-color: rgb(48, 66, 58);*/
+/*}*/
+/*.calculator-page {*/
+/*    min-height: 100vh;*/
+/*    display: flex;*/
+/*    flex-direction: column;*/
+/*    align-items: center;*/
+/*    justify-content: center;*/
+/*    font-size: calc(8px + 2vmin);*/
+/*    color: white;*/
+/*}*/
+/*.calculator__inner {*/
+/*    width: 375px;*/
+/*    height: 600px;*/
+/*    background-color: rgba(38, 38, 38, 0.23);*/
+/*    box-shadow: 0 10px 18px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);*/
+/*    text-align: center;*/
+/*    border-radius: 8px;*/
+/*    background: rgb(17, 75, 48); !* Old browsers *!*/
+/*    background: -moz-linear-gradient(left, rgb(17, 73, 44) 0%, rgb(79, 187, 150) 100%); !* FF3.6-15 *!*/
+/*    background: -webkit-linear-gradient(left, rgb(17, 73, 44) 0%, rgba(86, 208, 166, 1) 100%); !* Chrome10-25,Safari5.1-6 *!*/
+/*    background: linear-gradient(to right, rgba(17, 73, 33, 1) 0%, rgb(86, 208, 166, 1) 100%); !* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ *!*/
+/*    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#8c48a5', endColorstr='#fca079', GradientType=1); !* IE6-9 *!*/
+/*}*/
+/*.calculator__window {*/
+/*    border-top-left-radius: 10px;*/
+/*    border-top-right-radius: 8px;*/
+/*    height: 200px;*/
+/*}*/
+/*.calculator__result-window {*/
+/*    display: flex;*/
+/*    justify-content: flex-end;*/
+/*}*/
+/*.calculator__result-window span {*/
+/*    margin-right: 40px;*/
+/*    margin-top: 40px;*/
+/*    font-size: 60px;*/
+/*}*/
+/*.calculator__operation-window {*/
+/*    display: flex;*/
+/*    justify-content: flex-end;*/
+/*}*/
+/*.calculator__operation-window span {*/
+/*    margin-right: 40px;*/
+/*    margin-top: 30px;*/
+/*    font-size: 20px;*/
+/*    color: rgba(255, 255, 255, 0.51);*/
+/*}*/
+/*.counter-btns {*/
+/*    height: 300px;*/
+/*    border-radius: 5px;*/
+
+/*}*/
+/*.row {*/
+
+/*    display: flex;*/
+/*    justify-content: space-between;*/
+/*    align-items: center;*/
+/*}*/
+/*.btn {*/
+/*    color: #ffffff;*/
+/*    font-size: 25px;*/
+/*    font-weight: 400;*/
+/*    border: none;*/
+/*    background-color: rgb(50, 50, 50);*/
+/*    cursor: pointer;*/
+/*    height: 80px;*/
+/*    width: 94px;*/
+/*}*/
+/*.btn:hover{*/
+/*    color: #93e5d3;*/
+/*}*/
+/*.counter__inc-btn {*/
+/*    margin-left: 15px;*/
+/*}*/
+
+/*.counter__reset-btn {*/
+/*    margin-right: 15px;*/
+/*}*/
+/*.operator {*/
+/*    background-color: rgb(47, 47, 47);*/
+/*    color: #5daf98;*/
+/*}*/
+/*.equal {*/
+/*    background: rgb(27, 83, 55); !* Old browsers *!*/
+/*    color: white;*/
+/*    font-size: 40px;*/
+/*    border-bottom-right-radius: 8px;*/
+/*}*/
+/*.more{*/
+/*    border-bottom-left-radius: 8px;*/
+/*    color: #5daf98;*/
+/*}*/
+/*.calculator-title {*/
+/*    text-align: center;*/
+/*    margin: 10px;*/
+/*}*/
+
+/*button:focus {*/
+/*    outline: none !important*/
+/*}*/
+.switch-inner{
+margin-left: 100px;
+}
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+/* The slider */
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+input:checked + .slider {
+    background-color: #2196F3;
+}
+
+input:focus + .slider {
+    box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+    border-radius: 34px;
+}
+
+.slider.round:before {
+    border-radius: 50%;
 }
