--- a/src/App.css
+++ b/src/App.css
@@ -136,9 +136,7 @@ button:focus {
     background: rgb(140, 72, 165);
     color: white;
 }
-.calculator.dark .more{
-    color: rgb(140, 72, 165);
-}
+
 
 
 /* The switch - the box around the slider */
@@ -147,6 +145,8 @@ button:focus {
     display: inline-block;
     width: 60px;
     height: 34px;
+    margin-left: 20px;
+    margin-top: 20px;
 }
 
 /* Hide default HTML checkbox */
@@ -182,7 +182,7 @@ button:focus {
 }
 
 input:checked + .slider {
-    background-color: rgba(252, 160, 121, 1);
+    background-color:  rgb(140, 72, 165);
 }
 
 
